<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".fragment.AddToDoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Add New Todo:"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="#80000000"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_todo"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/bg_et"
            android:gravity="start"
            android:hint="@string/enter_todo"
            android:padding="10dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_et"
            android:focusable="false"
            android:hint="@string/enter_date"
            android:inputType="none"
            android:padding="15dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="#F2C6FA"
            android:text="@string/save_todo"
            android:textColor="@android:color/white" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>