<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/secondary_text_dark"
    android:orientation="vertical"
    tools:context=".view.UpdateTaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D6F6FA">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B7DCED"
            android:theme="@style/Theme.AppCompat"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="Update Todo" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F8EAEA">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F4E1E1"
            android:orientation="vertical"
            android:padding="15dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_edit_todo"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/bg_et"
                android:gravity="start"
                android:hint="@string/enter_todo"
                android:padding="10dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_edit_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_et"
                android:focusable="false"
                android:hint="@string/enter_date"
                android:inputType="none"
                android:padding="15dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_edit_save"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="#D4C3F1"
                android:text="@string/save_todo"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>